# image_processing

./: .gitignore  CMakeLists.txt  ignore  main.cpp  run.sh  tree.txt
sub_dir/: CMakeLists.txt
sub_dir/include/: BITMAPHEADER.hpp  image.hpp  pixels.hpp  vec2d.hpp
sub_dir/src/: getPadding.cpp  headerRead.cpp  initialize.cpp  readBMP.cpp  writeBMP.cpp
